<?xml version="1.0"?>
<package format="3">
  <name>fastbot_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for Fastbot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Needed for geometry_msgs in the action -->
  <depend>geometry_msgs</depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
